@@ -1,4 +1,4 @@
-                      Apache Solr Release Notes
+﻿                      Apache Solr Release Notes
 
 Introduction
 ------------
@@ -226,6 +226,8 @@ New Features
 
 * SOLR-2459: Expose LogLevel selection with a RequestHandler rather then servlet
   (Stefan Matheis, Upayavira, ryan)
+
+* SOLR-3134: Include shard info in distributed response when shards.info=true (ryan)
 
 
 Optimizations
